6166 fix MSI-X support in virtio driver Reviewed by: Daniel Kimmel <dan.kimmel@delphix.com> Reviewed by: Josef 'Jeff' Sipek <jeffpc@josefsipek.net> Approved by: Robert Mustacchi <rm@joyent.com>